feat: index com paginacao e documentacao
